<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">


    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/signUpLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:background="#263238"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        tools:context=".activity.SignupActivity">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="?attr/actionBarSize"
            android:src="@drawable/naught" />

        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipChildren="false"
            android:clipToPadding="false"
            android:divider="@android:color/transparent"
            android:dividerHeight="0.0px"
            card_view:cardCornerRadius="@dimen/card_radious"
            card_view:cardElevation="10dp"
            card_view:cardPreventCornerOverlap="false"
            card_view:cardUseCompatPadding="true">


            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fillViewport="true"
                android:scrollbars="none">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="20dp"
                    android:orientation="vertical"
                    android:paddingLeft="20dp"
                    android:paddingRight="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="Create a new account"
                        android:textColor="@color/colorPrimary"
                        android:textSize="20sp" />


                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_company_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="20dp">

                        <EditText
                            android:id="@+id/input_email"
                            style="@style/LoginTitleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_email"
                            android:imeOptions="actionNext"
                            android:inputType="text"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_input_passwords"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_passwords"
                            style="@style/LoginTitleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_password"
                            android:imeOptions="actionNext"
                            android:inputType="textEmailAddress"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/input_layout_company_contact"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/input_contact"
                            style="@style/LoginTitleText"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/hint_contact"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:maxLines="1" />
                    </android.support.design.widget.TextInputLayout>


                    <Button
                        android:id="@+id/btn_sign_up"
                        style="@style/ButtonTextStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="@color/colorPrimary"
                        android:text="@string/btn_signup" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:paddingBottom="20dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Already have an account?" />

                        <TextView
                            android:id="@+id/tv_already_login"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=" Login"
                            android:textStyle="bold" />

                    </LinearLayout>


                </LinearLayout>
            </ScrollView>

        </android.support.v7.widget.CardView>

    </LinearLayout>
</ScrollView>
